sas-core/main/default/objects/IRR_SMSResponse__c/IRR_SMSResponse__c.object-meta.xml
<CustomObject>
    <description>Holds SMS MO (Mobile originated) forwarded from SFMC</description>
    <label>SMS Response</label>
    <nameField>
        <label>SMS Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SMS Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>