sas-core/main/default/objects/IRR_SMSResponse__c/fields/IRR_CommunicationLog__c.field-meta.xml
<CustomField>
    <fullName>IRR_CommunicationLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The communication log of the latest sent message to the customer at the time of the message.</description>
    <inlineHelpText>The communication log of the latest sent message to the customer at the time of the message.</inlineHelpText>
    <label>Communication Log</label>
    <referenceTo>IRR_CommunicationLog__c</referenceTo>
    <relationshipLabel>SMS Responses</relationshipLabel>
    <relationshipName>IRR_SMSResponses</relationshipName>
    <type>Lookup</type>
</CustomField>