sas-core/main/default/objects/IRR_SMSResponse__c/fields/IRR_CompositeId__c.field-meta.xml
<CustomField>
    <fullName>IRR_CompositeId__c</fullName>
    <label>Composite Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>