sas-core/main/default/objects/IRR_SMSResponse__c/fields/IRR_DateUTC__c.field-meta.xml
<CustomField>
    <fullName>IRR_DateUTC__c</fullName>
    <label>Date UTC</label>
    <type>Date</type>
</CustomField>