sas-core/main/default/objects/IRR_SMSResponse__c/fields/IRR_DefinitionId__c.field-meta.xml
<CustomField>
    <fullName>IRR_DefinitionId__c</fullName>
    <label>Definition Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>