sas-core/main/default/objects/IRR_SMSResponse__c/fields/IRR_DefinitionKey__c.field-meta.xml
<CustomField>
    <fullName>IRR_DefinitionKey__c</fullName>
    <label>Definition Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>