sas-core/main/default/objects/IRR_SMSResponse__c/fields/IRR_EID__c.field-meta.xml
<CustomField>
    <fullName>IRR_EID__c</fullName>
    <label>EID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>