sas-core/main/default/objects/IRR_SMSResponse__c/fields/IRR_EventCategoryType__c.field-meta.xml
<CustomField>
    <fullName>IRR_EventCategoryType__c</fullName>
    <label>Event Category Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>