sas-core/main/default/objects/IRR_SMSResponse__c/fields/IRR_InfoFrom__c.field-meta.xml
<CustomField>
    <fullName>IRR_InfoFrom__c</fullName>
    <label>Info From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>