sas-core/main/default/objects/IRR_SMSResponse__c/fields/IRR_InfoMessage__c.field-meta.xml
<CustomField>
    <fullName>IRR_InfoMessage__c</fullName>
    <label>Info Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>