sas-core/main/default/objects/IRR_SMSResponse__c/fields/IRR_InfoMessageNouns__c.field-meta.xml
<CustomField>
    <fullName>IRR_InfoMessageNouns__c</fullName>
    <label>Info Message Nouns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>