sas-core/main/default/objects/IRR_SMSResponse__c/fields/IRR_InfoMessageVerb__c.field-meta.xml
<CustomField>
    <fullName>IRR_InfoMessageVerb__c</fullName>
    <label>Info Messagev Verb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>