sas-core/main/default/objects/IRR_SMSResponse__c/fields/IRR_InfoShortCode__c.field-meta.xml
<CustomField>
    <fullName>IRR_InfoShortCode__c</fullName>
    <label>Info Short Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>