sas-core/main/default/objects/IRR_SMSResponse__c/fields/IRR_InfoStatus__c.field-meta.xml
<CustomField>
    <fullName>IRR_InfoStatus__c</fullName>
    <label>Info Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>