sas-core/main/default/objects/IRR_SMSResponse__c/fields/IRR_MID__c.field-meta.xml
<CustomField>
    <fullName>IRR_MID__c</fullName>
    <label>MID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>