sas-core/main/default/objects/IRR_SMSResponse__c/fields/IRR_TimeUTC__c.field-meta.xml
<CustomField>
    <fullName>IRR_TimeUTC__c</fullName>
    <label>Time UTC</label>
    <type>Time</type>
</CustomField>